# kernel_google-modules_soc_gs-zumapro

./: BUILD.bazel  Kbuild  Kconfig  Kconfig.ext  Kconfig.ext_modules  Makefile  Makefile.include  Makefile.preinstall  OWNERS  PREUPLOAD.cfg  README.md  bazel.WORKSPACE  build.config.cloudripper  build.config.gs.common  build.config.gs101  build.config.gs201  build.config.ripcurrent  build.config.slider  build.config.slider.blktest  build.config.slider.debug_api  build.config.slider.debug_kmemleak  build.config.slider.debug_locking  build.config.slider.debug_memory  build.config.slider.debug_memory_accounting  build.config.slider.kasan  build.config.slider.khwasan  build.config.zuma  build.config.zuma.gki  build.config.zuma_emulator  build.config.zuma_hybrid  build.config.zumapro  build.config.zumapro_emulator  build.config.zumapro_hybrid  build_cloudripper.sh  build_mixed.sh  build_ripcurrent.sh  build_slider.sh  build_zuma_zebu.sh  build_zumapro_zebu.sh  debug_build_configs.bzl  (+23 more)
Documentation/ABI/testing/: sysfs-devices-virtual-mitigation  sysfs-driver-ufs-pixel
arch/arm64/boot/dts/: BUILD.bazel
arch/arm64/boot/dts/google/: Makefile  gs101-audio.dtsi  gs101-bluejay-audio.dtsi  gs101-bluejay-battery.dtsi  gs101-bluejay-camera-pmic.dtsi  gs101-bluejay-camera.dtsi  gs101-bluejay-ese.dtsi  gs101-bluejay-fingerprint.dtsi  gs101-bluejay-sbbm.dtsi  gs101-bluejay-thermal.dtsi  gs101-bluejay-touch-dev.dtsi  gs101-bluejay-touch.dtsi  gs101-bluejay.dtsi  gs101-camera-pmic-av2.dtsi  gs101-camera-pmic-av4.dtsi  gs101-camera-slider-av2.dtsi  gs101-camera-slider-av4.dtsi  gs101-camera-slider1.dtsi  gs101-camera-slider2.dtsi  gs101-camera-whitefin.dtsi  gs101-common-bcl.dtsi  gs101-common-bluetooth.dtsi  gs101-common-gps.dtsi  gs101-common-gsc.dtsi  gs101-common-touch.dtsi  gs101-common-typec.dtsi  gs101-common-wlan.dtsi  gs101-cpu.dtsi  gs101-debug.dtsi  gs101-display-timing.dtsi  gs101-dma-heap.dtsi  gs101-drm-dpu.dtsi  gs101-faceauth-dma-heap.dtsi  gs101-gpu.dtsi  gs101-oriole-camera-pmic.dtsi  gs101-oriole-camera.dtsi  gs101-pinctrl.dtsi  gs101-pmic.dtsi  gs101-raven-bluetooth.dtsi  gs101-raven-camera.dtsi  (+197 more)
arch/arm64/configs/: cloudripper_gki.fragment  gki_defconfig  ripcurrent_gki.fragment  ripcurrent_modified_gki.fragment  slider_gki.fragment  zuma_emulator.fragment  zuma_emulator_modified_gki.fragment  zuma_gki.fragment  zuma_hybrid.fragment  zuma_modified_gki.fragment  zumapro_emulator.fragment  zumapro_hybrid.fragment
drivers/: OWNERS
drivers/block/zram/: Kconfig  zcomp.c  zcomp_cpu.c  zram_drv.c  zram_drv.h
drivers/bts/: bts.h  exynos-bts.c  exynos-btsopsgs.c
drivers/char/hw_random/: Kconfig
drivers/clk/gs/: Kbuild  Makefile  clk-zuma.c
drivers/clocksource/: Kbuild  Kconfig  exynos_mct_v3.c  exynos_mct_v3.h
drivers/cpufreq/: exynos-acme.c  exynos-acme.h
drivers/devfreq-whi/google/: Kbuild  arm-memlat-mon.c
drivers/devfreq/google/: Kbuild  arm-memlat-mon.c  arm-memlat-mon.h  dsulat-devfreq.c  governor_dsulat.c  governor_dsulat.h  governor_dsulat_trace.h  governor_memlat.c  governor_memlat.h  governor_memlat_trace.h  governor_simpleinteractive.c  gs-devfreq.c  gs-ppc.c  memlat-devfreq.c
drivers/dma/: pl330.c
drivers/dma-buf/heaps/: Kbuild  Kconfig  Makefile  deferred-free-helper.c  page_pool.c  system_heap.c
drivers/gpu/exynos/: Kconfig
drivers/i2c/busses/: Kconfig  i2c-exynos5.c
drivers/iio/: Kconfig
drivers/iio/power/: Kbuild  Kconfig  odpm-whi.c  odpm.c
drivers/input/: Kbuild  Kconfig  keydebug-core.c
drivers/input/fingerprint/: Kbuild  gf_spi.c
drivers/input/keyboard/: Kbuild  Kconfig
drivers/input/misc/: Kconfig
drivers/iommu/: Kbuild  Kconfig  Makefile  exynos-pcie-iommu-whi.c  exynos-pcie-iommu-whi.h  exynos-pcie-iommu-zuma.c  exynos-pcie-iommu-zuma.h  exynos-pcie-iommu.c  exynos-pcie-iommu.h  iovad-best-fit-algo.c  samsung-iommu-fault-v9.c  samsung-iommu-fault.c  samsung-iommu-v9.c  samsung-iommu-v9.h  samsung-iommu.c  samsung-iommu.h
drivers/iommu-whi/: Kconfig
drivers/media/platform/: Kconfig  Makefile
drivers/mfd/: Kbuild  Kconfig  s2mpg10-core.c  s2mpg11-core.c  s2mpg12-core.c  s2mpg13-core.c  s2mpg14-core.c  s2mpg14-irq.c  s2mpg1415-gpio.c  s2mpg15-core.c  s2mpg15-notifier.c  slg51000-core.c  slg51002-core.c
drivers/misc/: Kbuild  Kconfig
drivers/misc/bbdpl/: Kbuild  Kconfig  bcm_gps_spi.c
drivers/misc/s5910/: s5910.c
drivers/misc/sbb-mux/: sbb-mux.c  sbb-mux.h
drivers/performance/gs_perf_mon/: gs_perf_mon.c
drivers/performance/lat_governors/: Kbuild  Kconfig  gs_dsulat_devfreq.c  gs_governor_dsulat.c  gs_governor_dsulat.h  gs_governor_memlat.c  gs_governor_memlat.h  gs_governor_utils.c  gs_governor_utils.h  gs_memlat_devfreq.c
drivers/phy/: Kconfig
drivers/phy/samsung/: Kbuild  Kconfig  eusb_repeater.c  eusb_repeater.h  phy-exynos-snps-usbdp.c  phy-exynos-usbdp-gen2-v4.c  phy-exynos-usbdrd-eusb.c  phy-exynos-usbdrd.c  phy-exynos-usbdrd.h
drivers/pinctrl/: Kconfig
drivers/pinctrl/gs/: pinctrl-exynos.c  pinctrl-gs.c  pinctrl-gs201.c  pinctrl-samsung.c  pinctrl-samsung.h
drivers/power/: Kconfig
drivers/pwm/: Kconfig  pwm-exynos.c  pwm-samsung.c
drivers/regulator/: Kbuild  Kconfig  max77826-gs-regulator.c  rt6160-regulator.c  s2mpg14-powermeter.c  s2mpg14-regulator.c  s2mpg15-powermeter.c  s2mpg15-regulator.c
drivers/rtc/: Kbuild  Kconfig  rtc-s2mpg14.c
drivers/scsi/ufs/: Kbuild  Kconfig  ufs-dump.h  ufs-exynos-dbg.c  ufs-exynos-gs.h  ufs-exynos.c  (+5 more)
drivers/soc/: Kbuild
drivers/spi/: spi-s3c64xx.c
drivers/thermal/: Kconfig
drivers/thermal-whi/: Kconfig
drivers/trusty/: Kbuild  trusty-ipc.c  trusty-log.c  trusty-sched-share.c  trusty-virtio.c  trusty.c
drivers/ufs/: Kbuild  Kconfig  ufs-cal-if.h  ufs-exynos-crypto.c  ufs-exynos-dbg.c  ufs-exynos-gs.h  ufs-exynos-swkeys.c  ufs-exynos.c  ufs-pixel-crypto.c  ufs-pixel-crypto.h  ufs-pixel-fips-swkeys.c  ufs-pixel-fips.c  ufs-pixel.c  ufs-pixel.h  ufs-vs-mmio.h
drivers/usb/: Kconfig  Makefile
drivers/video/: Kconfig
drivers/watchdog/: s3c2410_wdt.c
include/: OWNERS
include/linux/: modem_notifier.h  s5910.h
include/misc/: logbuffer.h
(+401 files in other folders)
