# SPDX-License-Identifier: GPL-2.0

load("//build/kernel/kleaf:kernel.bzl", "kernel_dtstree")

kernel_dtstree(
    name = "slider_dt",
    srcs = glob(
        [
            "google/**/*.dtsi",
            "google/**/*.dts",
            "google/**/*.h",
        ],
        exclude = [
            "**/.*",
            "**/.*/**",
            "**/BUILD.bazel",
            "**/*.bzl",
        ],
    ) + [
        # keep sorted
        "Makefile",
        "google/Makefile",
        "//private/google-modules/soc/gs:slider_dt-bindings",
    ],
    visibility = [
        "//private/google-modules/soc/gs:__pkg__",
    ],
)
